--- a/Backstage/LastShopping/LastShopping/appsettings.Staging.json
+++ b/Backstage/LastShopping/LastShopping/appsettings.Staging.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
-    "LastShoppingDb": "Data Source=ioveasdkre;Initial Catalog=LastShoppingDb;User ID=Beta;Password=abc123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "LastShoppingDb": "Data Source=DESKTOP-CQ2O6FC;Initial Catalog=LastShoppingDb;User ID=ioveasdkre;Password=abc123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "UserAppDb": "Data Source=DESKTOP-CQ2O6FC;Initial Catalog=UserAppDb;User ID=ioveasdkre;Password=abc123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
