--- a/Backstage/LastShopping/LastShopping/appsettings.json
+++ b/Backstage/LastShopping/LastShopping/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LastShoppingDb": "Data Source=DESKTOP-CQ2O6FC;Initial Catalog=LastShoppingDb;User ID=ioveasdkre;Password=abc123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "LastShoppingDb": "Data Source=ioveasdkre;Initial Catalog=LastShoppingDb;User ID=Beta;Password=abc123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "UserAppDb": "Data Source=ioveasdkre;Initial Catalog=UserAppDb;User ID=Beta;Password=abc123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
