--- a/Backstage/LastShopping/LastShopping/LastShopping.csproj
+++ b/Backstage/LastShopping/LastShopping/LastShopping.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LastShopping.Database\LastShopping.Database.csproj" />
+    <ProjectReference Include="..\LastShopping.Services\LastShopping.Services.csproj" />
   </ItemGroup>
 
 </Project>
