--- a/Backstage/LastShopping/LastShopping/appsettings.json
+++ b/Backstage/LastShopping/LastShopping/appsettings.json
@@ -10,5 +10,9 @@
     "LastShoppingDb": "Data Source=ioveasdkre;Initial Catalog=LastShoppingDb;User ID=Beta;Password=abc123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "UserAppDb": "Data Source=ioveasdkre;Initial Catalog=UserAppDb;User ID=Beta;Password=abc123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "EncryptKey": "eed6aefe-fcc1-41f1-b956-cba1eafd3bea"
+  "AES": {
+    "Key": "eed6aefe-fcc1-41f1-b956-cba1eafd3bea",
+    "Iv": "c941545a-f385-41b1-9cd6-50f28babfec8"
+  }
+
 }
