更新資料庫模型、新增描述

--- a/Backstage/LastShopping/LastShopping.Database/LastShopping.Database.csproj
+++ b/Backstage/LastShopping/LastShopping.Database/LastShopping.Database.csproj
@@ -23,4 +23,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\LastShoppingDb\" />
+    <Folder Include="Migrations\UserAppDb\" />
+  </ItemGroup>
+
 </Project>
